implementation of selected time management for collecting user prefered time / time zone and working with it in UTC

--- a/templates/time.html
+++ b/templates/time.html
@@ -31,7 +31,9 @@
         <option value='24'>11 pm</option>
     </select>
     <select name='tz'>
+        <option value='US/Alaska'>Mountain</option>
         <option value='US/Eastern'>Eastern</option>
+        <option value='US/Hawaii'>Pacific</option>
         <option value='US/Central'>Central</option>
         <option value='US/Mountain'>Mountain</option>
         <option value='US/Pacific'>Pacific</option>
@@ -40,3 +42,17 @@
 </form>
 
 {% endblock %}
+
+<!-- US/Alaska
+US/Aleutian
+US/Arizona
+US/Central
+US/East-Indiana
+US/Eastern
+US/Hawaii
+US/Indiana-Starke
+US/Michigan
+US/Mountain
+US/Pacific
+US/Pacific-New
+US/Samoa -->
