modified model to create tables when run from terminal.  Fixed bugs that prevented tables from creating

--- a/templates/time.html
+++ b/templates/time.html
@@ -31,9 +31,9 @@
         <option value='24'>11 pm</option>
     </select>
     <select name='tz'>
-        <option value='US/Alaska'>Mountain</option>
+        <option value='US/Alaska'>Alaska</option>
         <option value='US/Eastern'>Eastern</option>
-        <option value='US/Hawaii'>Pacific</option>
+        <option value='US/Hawaii'>Hawaii</option>
         <option value='US/Central'>Central</option>
         <option value='US/Mountain'>Mountain</option>
         <option value='US/Pacific'>Pacific</option>
