--- a/templates/browse.html
+++ b/templates/browse.html
@@ -3,13 +3,12 @@
 
 <h1>Which habit?</h1>
 
+{% for habit in habits %}
 <form action='/time' method='POST'>
-    <select name='habit'>
-        <option value='medite'>meditate</option>
-        <option value='no-screen'>no screen</option>
-        <option value='jog'>jog</option>
-    </select>
-    <input type='submit'>
+    <input type="hidden" name="habit" vale="{{ habit.create_habit_id }}">
+    <input type='submit', value="{{ habit.create_habit_title }}: {{ habit.create_habit_description }}">
 </form>
+{% endfor %}
+
 
 {% endblock %}
