removed quotes included on strings in data/ files, modified forms to use GET not POST, finished signup route to check if user is alredy in database

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -4,8 +4,8 @@
 <h1>Which habit?</h1>
 
 {% for habit in habits %}
-<form action='/time' method='POST'>
-    <input type="hidden" name="habit" vale="{{ habit.create_habit_id }}">
+<form action='/time' method='GET'>
+    <input type="hidden" name="habit_id" value="{{ habit.create_habit_id }}">
     <input type='submit', value="{{ habit.create_habit_title }}: {{ habit.create_habit_description }}">
 </form>
 {% endfor %}
