--- a/templates/time.html
+++ b/templates/time.html
@@ -3,7 +3,7 @@
 
 <h1>What time do you want to do that?</h1>
 
-<form action='/confirm', method='POST'>
+<form action='/confirm', method='GET'>
     <select name='hour'>
         <option value='0'>12 am</option>
         <option value='1'>1 am</option>
