--- a/templates/verification.html
+++ b/templates/verification.html
@@ -9,7 +9,7 @@
 {% endfor %}
 </ul>
 
-<form action='/signin', method='POST'>
+<form action='/signin', method='GET'>
     <input type='text' name='code'>
     <input type='submit' value='Verify me!'>
 </form>
