--- a/templates/name.html
+++ b/templates/name.html
@@ -3,7 +3,7 @@
 
 <h1>What should we call you?</h1>
 
-<form action='/habit', method='GET'>
+<form action='/signup', method='GET'>
     <input type='text' name='name'>
     <input type='submit' value='thats me!'>
 </form>
