finalized success processing functions (maximizing modularity), updated model to normalize and updated seed, seed files and server.py to work with new model

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>You've arrived at your dashboard!</h1>
-<p>Your current habit: {{ user_habit.habit_id }}</p>
-<p>current streak: {{ current_streak_days }} </p>
-<p>total days: {{ user_habit.total_days }} </p>
-<p>longest streak: {{ user_habit.longest_streak }} </p>
+<h1>Hi, {{ user_habit.user.name }}
+<h2>You're doing a great job!</h2>
+
+<p>Your current habit: {{ user_habit.habit.create_habit_title }} </p>
+<p>current streak: {{ stats['current_streak'] }} </p>
+<p>total days: {{ stats['total_days'] }} </p>
+<p>longest streak: {{ stats['longest_streak'] }} </p>
 
 {% endblock %}
