--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
 <h1>Habitify is awesome! Sign up!</h1>
 
 <form action='/verify', method='GET'>
+    <input type='text' name='country_calling_code'>
     <input type='text' name='mobile'>
     <input type='submit' value='Lets do this!'>
 </form>
