--- a/templates/time.html
+++ b/templates/time.html
@@ -30,14 +30,14 @@
         <option value='23'>10 pm</option>
         <option value='24'>11 pm</option>
     </select>
-    <select name='tz'>
+<!--     <select name='tz'>
         <option value='US/Alaska'>Alaska</option>
         <option value='US/Eastern'>Eastern</option>
         <option value='US/Hawaii'>Hawaii</option>
         <option value='US/Central'>Central</option>
         <option value='US/Mountain'>Mountain</option>
         <option value='US/Pacific'>Pacific</option>
-    </select>
+    </select> -->
     <input type='submit'>
 </form>
 
