tested sign in flow (existing user) and successfully fixed bugs in helper.py and server.py

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,8 +5,8 @@
 <h2>You're doing a great job!</h2>
 
 <p>Your current habit: {{ user_habit.habit.create_habit_title }} </p>
-<p>current streak: {{ stats['current_streak'] }} </p>
-<p>total days: {{ stats['total_days'] }} </p>
-<p>longest streak: {{ stats['longest_streak'] }} </p>
+<p>current streak: {{ stats["current_streak"] }} </p>
+<p>total days: {{ stats["total_days"] }} </p>
+<p>longest streak: {{ stats["longest_streak"] }} </p>
 
 {% endblock %}
