debugged and fixed issues in the new user sign up flow

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Habitify is awesome! Sign up!</h1>
+<h1>Hi, I'm Habot.</h1>
+<h2> A bot coach to help you create habits </h2>
+<h3> Let's get started! What's your phone number? </h3>
 
 <form action='/verify', method='GET'>
     <input type='text' name='country_calling_code'>
