--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -3,11 +3,11 @@
 
 <h1>Excellent! {{ session['name'] }} You're confirmed!</h1>
 <p>your mobile: {{ session['mobile'] }} <p>
-<p>your habit_id: {{ user_habit.create_habit_id }} </p>
+<p>your habit_id: {{ user_habit.habit.create_habit_id }} </p>
 <p>hour: {{ hour }} </p>
-<p> timezone: {{ user_habit.tz }} </p>
+<p> timezone: {{ user_habit.user.tz }} </p>
 
 <p> for our purposes, your time is saved in UTC </p>
-<p> utc hour: {{ user_habit.utc_hour }} 
+<p> utc hour: {{ user_habit.utc_time }} 
 
 {% endblock %}
