modifified data model to accommodate for factor ratings and recommended habits based on factor ratings

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,5 +8,6 @@
 <p>current streak: {{ stats["current_streak"] }} </p>
 <p>total days: {{ stats["total_days"] }} </p>
 <p>longest streak: {{ stats["longest_streak"] }} </p>
+<p>7 days streaks: {{ stats["week_streaks"] }}
 
 {% endblock %}
