--- a/templates/timezone.html
+++ b/templates/timezone.html
@@ -5,7 +5,7 @@
 
 
 {% for timezone in timezones %}
-<form action='/signup' method='GET'>
+<form action='/factors' method='GET'>
     <input type="hidden" name="tz" value="{{ timezone }}">
     <input type='submit', value="{{ timezone }}">
 </form>
