get_recommendations function working to produce a ranked dictionary of habits for a given user with a given profile of scores.

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -10,4 +10,6 @@
 <p> for our purposes, your time is saved in UTC </p>
 <p> utc hour: {{ user_habit.utc_time }} 
 
+<a href="/dashboard">Dashboard</a>
+
 {% endblock %}
