--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 <h1> recommended habits for you </h1>
+<p> {{ habit_fits }}
 
 <a href="/get-reccommendations">get more recommendations</a>
-
-
+<br>
 <a href="/habits">browse all habits</a>
 
 
