--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <title></title>
+    <title>habot</title>
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
