--- a/templates/browse.html
+++ b/templates/browse.html
@@ -7,8 +7,7 @@
 <form action='/time' method='GET'>
 <div>
     <input type="hidden" name="habit_id" value="{{ habit.create_habit_id }}">
-    <input type='submit', value="{{ habit.title }}">
-    <p>{{ habit.description }}</p>
+    <input type='submit', value="{{ habit.title }}: {{ habit.description }}">
 </div>
 </form>
 {% endfor %}
