--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Excellent! {{ session['name'] }} You're confirmed!</h1>
-<p>your mobile: {{ session['mobile'] }} <p>
-<p>your habit_id: {{ user_habit.habit.create_habit_id }} </p>
-<p>hour: {{ hour }} </p>
-<p> timezone: {{ user_habit.user.tz }} </p>
+<h1>Excellent! {{ habit.user.name }} You're confirmed!</h1>
+<p>your mobile: {{ habit.user.mobile }} <p>
+<p>habit_id: {{ habit.habit.create_habit_id }} </p>
+<p>your habit: {{ habit.habit.title }} </p>
+<p> timezone: {{ habit.user.tz }} </p>
 
 <p> for our purposes, your time is saved in UTC </p>
-<p> utc hour: {{ user_habit.utc_time }} 
+<p> utc hour: {{ habit.utc_time }} 
 
 <a href="/dashboard">Dashboard</a>
 
