--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -32,28 +32,36 @@
         'use strict';
 
         var dataset1 = [
-          { count: 10 }, 
-          { count: 20 },
-          { count: 30 },
-          { count: 40 }
+          { label: '1-week', count: 1 }, 
+          { label: '2-week', count: 1 },
+          { label: '3-week', count: 1 },
+          { label: '4-week', count: 1 },
+          { label: '5-week', count: 1 },
+          { label: '6-week', count: 1 },
         ];
         
         var dataset2 = [
-          { count: 5 }, 
-          { count: 15 }, 
-          { count: 25 },
-          { count: 35 },
-          { count: 45 }
+          { label: '1-day', count: 1 },
+          { label: '2-day', count: 1 },
+          { label: '3-day', count: 1 },
+          { label: '4-day', count: 1 },
+          { label: '5-day', count: 1 },
+          { label: '6-day', count: 1 },
+          { label: '7-day', count: 1 },
         ];
 
-        var width = 400;
-        var height = 400;
-        var donutWidth = 75;
+        var width = 200;
+        var height = 200;
+        var donutWidth = 10;
         var radius1 = Math.min(width, height) / 2;
-        var radius2 = radius1 - donutWidth;
+        var radius2 = radius1 - donutWidth - 10;
         
-        var color1 = d3.scale.category20();
-        var color2 = d3.scale.category20c();
+        var color1 = d3.scale.ordinal()
+          .domain(['1-week', '2-week', '3-week', '4-week', '5-week', '6-week', '7-week'])
+          .range(['#DFF2B4', '#AEDFB6', '#79CBBC', '#41B2C2', '#228BBC', '#2258A5', '#20388F']);
+        var color2 = d3.scale.ordinal()
+          .domain(['1-day', '2-day', '3-day', '4-day', '5-day', '6-day', '7-day'])
+          .range(['#20388F', '#20388F', '#20388F', '#20388F', '#20388F', 'white', 'white']);
 
         var svg = d3.select('#chart')
           .append('svg')
@@ -82,6 +90,7 @@
           .enter()
           .append('path')
           .attr('d', arc1)
+          .attr('stroke', 'light-gray')
           .attr('fill', function(d, i) { 
             return color1(i);
           });
@@ -90,6 +99,7 @@
           .enter()
           .append('path')
           .attr('d', arc2)
+          .attr('stroke', 'light-gray')
           .attr('fill', function(d, i) { 
             return color2(i);
           });
